<resources>
    <string name="app_name">muninn</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="select_mode">Select Muninn\'s Flight Mode</string>
    <string name="select_camera_mode">Select the Camera Mode</string>


    <string name="action_example">Example action</string>

    <string name="action_settings">Settings</string>

    <string name="beacon">Beacon</string>
    <string name="launch_land">Launch/Land</string>
    <string name="mode_select">Mode Selection</string>
    <string name="camera">Camera</string>
    <string name="settings">Settings</string>
    <string name="welcome">Welcome to Muninn</string>
    <string name="munnin_logo">Muninn Logo</string>
    <string name="launch">Launch</string>
    <string name="land">Land</string>
    <string name="beacon_settings">Beacon Settings</string>
    <string name="app_settings">Application Settings</string>
    <string name="title_activity_camera">CameraActivity</string>

    <string name="hello_world">Hello world!</string>
    <string name="connect">Connect</string>
    <string name="status">Status:</string>
    <string name="in_flight">In Flight</string>
    <string name="landed">Landed</string>
    <string name="landing">Landing...</string>
    <string name="connected">Connected</string>
    <string name="not_connected">Not Connected</string>
    <string name="mode_settings">Mode Settings</string>
    <string name="hover_dist">Hover Distance:</string>
    <string name="follow_dist">Follow Me Distance:</string>
    <string name="loop_radius">Loop Radius:</string>
    <string name="feet">ft.</string>
    <string name="save_settings">Save Settings</string>
    <string name="general_settings">General Settings</string>
    <string name="dark_theme">Dark Theme?</string>
    <string name="gps_select">Use This Phone\'s GPS?</string>
    <string name="devices">Found Devices</string>
    <string name="drone_settings">Drone Settings</string>
    <string name="drone_status">Drone Status</string>
    <string name="connect_status">Connection Status:</string>
    <string name="battery">Battery:</string>
    <string name="percent_symbol">%</string>
    <string name="flight_mode">Flight Mode:</string>
    <string name="hover">Hover</string>
    <string name="loop">Loop</string>
    <string name="follow_me">Follow Me</string>
    <string name="which_gopro">GoPro Hero 4?</string>
    <string name="camera_mode">Camera Mode</string>
</resources>
