<!-- A DrawerLayout is intended to be used as the top-level content view using match_parent for both width and height to consume the full space available. -->
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:id="@+id/drawer_layout"
    android:layout_width="match_parent" android:layout_height="match_parent"
    tools:context=".HomeActivity">

    <!-- As the main content view, the view below consumes the entire
         space available using match_parent in both dimensions. -->
    <RelativeLayout android:id="@+id/container" android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <Button
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/Beacon"
            android:id="@+id/button_beacon"
            android:layout_gravity="center"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp" />

        <Button
            android:layout_width="128dp"
            android:layout_height="wrap_content"
            android:text="@string/mode_select"
            android:id="@+id/button_mode"
            android:layout_gravity="center"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:layout_alignStart="@id/button_beacon"
            android:layout_alignEnd="@id/button_beacon"
            android:layout_above="@+id/button_beacon" />

        <Button
            android:layout_width="128dp"
            android:layout_height="wrap_content"
            android:text="@string/launch_land"
            android:id="@+id/button_launch_land"
            android:layout_gravity="center"
            android:layout_alignStart="@id/button_beacon"
            android:layout_alignEnd="@id/button_beacon"
            android:layout_above="@+id/button_mode" />

        <Button
            android:layout_width="128dp"
            android:layout_height="wrap_content"
            android:text="@string/settings"
            android:id="@+id/button_settings"
            android:layout_gravity="center"
            android:layout_alignStart="@id/button_beacon"
            android:layout_alignEnd="@id/button_beacon"
            android:layout_below="@+id/button_beacon"
            android:layout_marginTop="20dp" />

        <Button
            android:layout_width="128dp"
            android:layout_height="wrap_content"
            android:text="@string/camera"
            android:id="@+id/button_camera"
            android:layout_gravity="center"
            android:layout_alignStart="@id/button_beacon"
            android:layout_alignEnd="@id/button_beacon"
            android:layout_below="@+id/button_settings"
            android:layout_marginTop="20dp" />

    </RelativeLayout>

    <!-- android:layout_gravity="start" tells DrawerLayout to treat
         this as a sliding drawer on the left side for left-to-right
         languages and on the right side for right-to-left languages.
         If you're not building against API 17 or higher, use
         android:layout_gravity="left" instead. -->
    <!-- The drawer is given a fixed width in dp and extends the full height of
         the container. -->
    <fragment android:id="@+id/navigation_drawer"
        android:layout_width="@dimen/navigation_drawer_width" android:layout_height="match_parent"
        android:layout_gravity="start"
        android:name="flycam.csce_483.muninn.NavigationDrawerFragment"
        tools:layout="@layout/fragment_navigation_drawer" />

</android.support.v4.widget.DrawerLayout>
