<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/background_dark">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/drone_status"
        android:id="@+id/drone_settings_title"
        android:layout_gravity="center_horizontal"
        android:textColor="@android:color/white"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="5dp" />

    <View
        android:layout_width="wrap_content"
        android:layout_height="3dp"
        android:layout_marginBottom="5dp"
        android:background="@drawable/line_separator"
        android:id="@+id/line_separator" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/in_flight"
        android:id="@+id/drone_flight_status_text"
        android:textColor="@android:color/white"
        android:layout_marginBottom="20dp" />

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/connect_status"
            android:id="@+id/textView"
            android:textColor="@android:color/white"
            android:layout_marginRight="15dp" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/drone_connected_symbol"
            android:src="@drawable/drone_connected_symbol"
            android:layout_marginBottom="10dp"
            android:visibility="visible"
            android:layout_toRightOf="@+id/textView"
            android:layout_centerVertical="true" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/connect_status"
            android:id="@+id/battery_text"
            android:textColor="@android:color/white"
            android:layout_marginRight="15dp" />

    </RelativeLayout>

</LinearLayout>